[project]
name = "firstprinciples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "flash-attn>=2.8.0.post2",
    "peft>=0.15.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
]
